[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-enrichment-agent-lambda"
version = "1.0.0"
description = "Lambda handler for control enrichment via NexusStrandsAgentService"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.26.0",
    "urllib3>=2.0.0",
    "nexus-application-commons",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto[dynamodb]>=4.0.0",
    "responses>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["nexus_enrichment_agent_lambda"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
